# errors

./: Cargo.toml  Dockerfile  build.sh  kube.yaml
src/: main.rs
templates/: base.html.tera  unknown.html.tera
