[package]
name = "as207960-errors"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "<=0.4.7"
rocket_contrib = { version = "<=0.4.7", default-features = false, features = ["tera_templates", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
